--- a/backend_common/src/main/resources/application.yml
+++ b/backend_common/src/main/resources/application.yml
@@ -1,1 +1,22 @@
 
+#\u8FD9\u91CC\u4E0D\u914D\u7F6E\u542F\u52A8\u7AEF\u53E3,\u662F\u56E0\u4E3A\u6211\u4EEC\u4F1A\u6253\u6210jar\u5305\u5F15\u5165\u5230\u5176\u4ED6\u7684\u6A21\u5757\u5F53\u4E2D
+
+
+mybatis-plus:
+  # "**" \u4EE3\u8868\u4EFB\u610F\u8DEF\u5F84
+  mapper-locations: classpath*:com/mooc/meetingfilm/**/xml/*Mapper.xml
+  global-config:
+    id-type: 0  #0:\u6570\u636E\u5E93ID\u81EA\u589E   1:\u7528\u6237\u8F93\u5165id  2:\u5168\u5C40\u552F\u4E00id(IdWorker)  3:\u5168\u5C40\u552F\u4E00ID(uuid)
+    db-column-underline: false
+    refresh-mapper: true
+
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/mooc_demo?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=UTC
+    username: root
+    password: 123456
+    filters: log4j,wall,mergeStat
+
+#springboot\u65E5\u5FD7\u4EA4\u7ED9logback\u8FDB\u884C\u7BA1\u7406
+logging:
+  config: classpath:logback.xml
