--- a/backend_common/pom.xml
+++ b/backend_common/pom.xml
@@ -53,6 +53,13 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.mooc</groupId>
+            <artifactId>backend-utils</artifactId>
+        </dependency>
+
     </dependencies>
 
 
