--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,19 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>2020.0.3-SNAPSHOT</spring-cloud.version>
+        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
         <java.version>1.8</java.version>
         <mybatis.plus.version>3.2.0</mybatis.plus.version>
         <druid.version>1.1.10</druid.version>
         <mysql.version>8.0.13</mysql.version>
-        <!--mybatis_plus生成代码的一个模板框架-->
         <beetl.version>2.9.10</beetl.version>
         <log4j.version>1.2.17</log4j.version>
+        <guava.version>28.1-jre</guava.version>
+        <fastjson.version>1.2.60</fastjson.version>
+        <jjwt.version>0.9.0</jjwt.version>
+        <testng.version>7.0.0</testng.version>
+        <extentreports.version>4.0.9</extentreports.version>
+        <testng.extentreports.version>1.3.1</testng.extentreports.version>
     </properties>
     <dependencies>
         <dependency>
@@ -59,6 +64,7 @@
             <scope>test</scope>
         </dependency>
 
+
     </dependencies>
 
 
@@ -73,6 +79,26 @@
                 <scope>import</scope>
             </dependency>
 
+            <!-- guava支持 -->
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+
+            <!-- JSON处理 -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+
+            <!-- JWT依赖 -->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${jjwt.version}</version>
+            </dependency>
 
             <!-- mybatis-plus依赖 -->
             <dependency>
