--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.0</version>
+        <version>2.1.8.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.mooc.meetingfilm</groupId>
@@ -19,6 +19,7 @@
         <module>backend_common</module>
         <module>backend_utils</module>
         <module>backend_user</module>
+        <module>backend_eureka_server</module>
     </modules>
 
     <properties>
