搭建show模块用于展示微服务组件基本功能,简历show-consumer和show-provider模块,初步运行测试无问题

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>backend_utils</module>
         <module>backend_user</module>
         <module>backend_eureka_server</module>
+        <module>backend_show</module>
     </modules>
 
     <properties>
